// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in multipart/form-data request body > generates body type with binary field in multipart upload 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostUploadBody = { file: FileInput; description?: string; };

export type PostUploadResponse = void;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in multipart/form-data request body > generates body type with multiple binary fields 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export interface FileInput {
  data: Blob;
  filename: string;
}

export type PostBatchUploadBody = { avatar: FileInput; document?: FileInput; thumbnail?: FileInput; name?: string; };

export type PostBatchUploadResponse = void;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > binary in response content > generates string response type for binary content 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type GetFilesIdResponse = StreamResponse;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > byte format in request body > generates body type with byte field for base64-encoded data 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type PostDataBody = { payload: string; };

export type PostDataResponse = void;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for format: binary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type FileData = string;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for format: byte 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type Base64Data = string;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — file upload (format: binary / byte) > schema-level format > generates string type for nullable binary format 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type OptionalFile = string | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;
